[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-omics"
version = "1.0.0"
authors = [
    {name = "Manus AI", email = "contact@manus.ai"},
]
description = "BRIDGE: Biological Regulatory Integration for Dynamic Gene Expression - A framework for integrating SCENIC+ and PINNACLE for multi-omic network analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["bioinformatics", "single-cell", "gene-regulation", "protein-networks", "scenic", "pinnacle", "multi-omics", "bridge"]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scanpy>=1.8.0",
    "anndata>=0.8.0",
    "h5py>=3.1.0",
    "tables>=3.6.0",
    "python-igraph>=0.9.0",
    "leidenalg>=0.8.0",
    "python-louvain>=0.15",
    "statsmodels>=0.12.0",
    "tqdm>=4.60.0",
    "joblib>=1.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
scvi = [
    "scvi-tools>=0.16.0",
    "torch>=1.10.0",
]
velocity = [
    "scvelo>=0.2.4",
    "velocyto>=0.17.17",
    "cellrank>=1.5.0",
]
ot = [
    "POT>=0.8.0",
    "moscot>=1.0.0",
]
viz = [
    "plotly>=5.0.0",
    "umap-learn>=0.5.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "myst-parser>=0.15",
]
all = [
    "scvi-tools>=0.16.0",
    "torch>=1.10.0",
    "POT>=0.8.0",
    "moscot>=1.0.0",
    "scvelo>=0.2.4",
    "velocyto>=0.17.17",
    "cellrank>=1.5.0",
    "plotly>=5.0.0",
    "umap-learn>=0.5.0",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "myst-parser>=0.15",
]

[project.scripts]
bridge = "bridge.cli:main"

[project.urls]
Homepage = "https://github.com/manus-ai/bridge"
Documentation = "https://bridge-omics.readthedocs.io/"
Repository = "https://github.com/manus-ai/bridge"
"Bug Reports" = "https://github.com/manus-ai/bridge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bridge = ["data/*.json", "data/*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=bridge",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

